// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package tast.cros.baserpc;
option go_package = "chromiumos/tast/services/cros/baserpc";

// FileSystem provides basic access to file system on the DUT.
service FileSystem {
  // ReadDir returns the content of a directory.
  rpc ReadDir (ReadDirRequest) returns (ReadDirResponse) {}
  rpc Stat (StatRequest) returns (FileInfo) {}
  rpc ReadFile (ReadFileRequest) returns (ReadFileResponse) {}
}

message ReadDirRequest {
  // Path to the directory to read the content of.
  string dir = 1;
}

message ReadDirResponse {
  // List of files under the directory, sorted by filename.
  repeated FileInfo files = 1;
}

message StatRequest {
  // File path to the file to get file information.
  string name = 1;
}

message ReadFileRequest {
  // File path to the file to be read.
  string name = 1;
}

message ReadFileResponse {
  bytes content = 1;
}

// FileInfo contains attributes of a file.
message FileInfo {
  string name = 1;
  uint64 size = 2;
  uint64 mode = 3;
  google.protobuf.Timestamp modified = 4;
}
