// Copyright 2022 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.


syntax = "proto3";

package tast.cros.kiosk;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/kiosk";

// Kiosk provides functions to perform on kiosk.
service KioskService {
  rpc ConfirmKioskStarted(ConfirmKioskStartedRequest) returns (google.protobuf.Empty) {}
}

message ConfirmKioskStartedRequest {
}
